<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Verification"
    android:background="@drawable/back10">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:onClick="goto_authentication"
        android:drawableStart="@drawable/arrow_back_"
        android:background="@drawable/ripple"
        android:text="@string/back"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:alpha="0.7"
        android:textStyle="bold"
        android:layout_marginEnd="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias=".15"
        android:textSize="20sp"
        android:alpha="0.9"
        android:textStyle="bold"
        android:text="@string/otp_verificaton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:alpha="0.9"
        android:text="@string/enter_6_digit_otp_here_for_verification"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV1"
        app:layout_constraintVertical_bias="0" />

    <com.e_sathi.driver.OtpEditText
        android:id="@+id/txt_pin_entry"
        android:layout_width="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:textCursorDrawable="@color/teal_700"
        android:digits="1234567890"
        android:inputType="number"
        android:maxLength="6"
        app:layout_constraintVertical_bias=".3"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="40dp"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="0"
        android:textSize="15sp"
        android:alpha="0.9"
        android:background="@drawable/ripple"
        android:onClick="Resend_otp"
        android:text="@string/resend_otp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pin_entry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias=".42"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:elevation="10dp"
        android:onClick="Verify"
        android:translationZ="10dp"
        android:stateListAnimator="@null"
        android:text="@string/verify"
        android:padding="8dp"
        android:gravity="center"
        style="@style/ButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>